--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
         margin: 40px auto;
       }
 
-      /* h1 {
-        border: 2px solid #fff;
-        border-radius: 4px;
-      } */
-
       button {
         background: none;
         border: 2px solid #fff;
@@ -143,7 +138,8 @@
         { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/ferrari.png?raw=true", matched:false },
         { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/jeep.png?raw=true", matched:false },
         { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/lamborghini.png?raw=true", matched:false },
-        { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/porsche.png?raw=true", matched:false }
+        { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/porsche.png?raw=true", matched:false },
+        { "src": "https://www.bugatti.com/typo3conf/ext/bugatti_sitepackage/Resources/Public/Images/BXX/bxx-01-main.png", matched:false }
       ]
 
       function Memory_Game() {
