--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
         { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/jeep.png?raw=true", matched:false },
         { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/lamborghini.png?raw=true", matched:false },
         { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/porsche.png?raw=true", matched:false },
-        { "src": "https://www.bugatti.com/typo3conf/ext/bugatti_sitepackage/Resources/Public/Images/BXX/bxx-01-main.png", matched:false }
+        { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/lamborghini%20urus.png?raw=true", matched:false },
+        { "src": "https://github.com/JDgomez2002/lab06_web/blob/main/img/bugatti.png?raw=true", matched:false }
       ]
 
       function Memory_Game() {
